fixed course title line spacing on comment index page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -90,6 +90,7 @@ div#course_details {
       border-radius: 7px;
       text-transform: uppercase;
       letter-spacing: 1px;
+      line-height: 1.5em;
     }
 
     small {
